Fix overflow, mention speakers

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -8,6 +8,7 @@ body {
   align-items: stretch;
   display: flex;
   justify-content: stretch;
+  overflow-x: hidden;
 }
 
 body > div {
